css/main.css
/* ... */
.splitImageFound
{
	padding-top: 50px;
}






.newsBg
{
	margin-top: 50px;
	padding-top: 60px;
	padding-bottom: 60px;
	background-color: #363636;
}

.newsFoun h2
{
	font-family: 'bebasregular', serif;
	color: #1ebdeb;
	margin-top: 40px;
	font-weight:100;
	padding-bottom: 10px;
	border-bottom: 1px solid #1ebdeb;
	word-spacing: 5px;	
}

.newsFounLinks p
{
	font-family: 'Lato', sans-serif;
	color: #FFF;
	padding-top: 20px;
}

.newsFounLinks a
{
	color: #1ebdeb;
	text-decoration: underline;
	padding-right: 20px;
}

.newsFounLinks a:hover {
	color:#f98b09;
}

.newsFoun
{
	padding-bottom: 30px;

}

.bod {

	padding-top: 60px;
	padding-bottom: 60px;
	
}

.bodyBg{
	background-color: #FFF;	
}

.board {
	padding: 20px;
}

.bod h2
{
	font-family: 'bebasregular', serif;
	color: #1ebdeb;
	margin-top: 40px;
	word-spacing: 5px;		
}

.bod p
{
	font-family: 'Lato', sans-serif;
	color: #464646;
	margin-top: 10px;
	margin-bottom: 30px;	
}

.bodCont h3
{
	font-family: 'Lato', sans-serif;
	color: #FFF;
	font-size: 14px;
	padding-left: 10px;
	font-weight: 400;
	padding-top: 10px;

}

.bodCont p
{
	font-family: 'Lato', sans-serif;
	color: #FFF;
	font-size: 13px;
	padding-left: 10px;
	padding-top: 10px;
	padding-bottom: 20px;	
}

.bodBg
{
	background-color: #3a3a3a;
}

.outsideLinks
{	
	padding-top:60px;
	padding-bottom:60px;
}

.outsideLinks h2
{
	font-family: 'bebasregular', serif;
	color: #1ebdeb;
	margin-top: 40px;
	word-spacing: 5px;
	padding-bottom: 10px;
	border-bottom: 1px solid #1ebdeb;	
}

.linkInfo h3
{
	font-family: 'Lato', sans-serif;
	color: #707070;
	font-size: 18px;
	margin-bottom: 10px;
	margin-top: 10px;		
}

.linkInfo p
{
	font-family: 'Lato', sans-serif;
	color: #707070;
	font-size: 14px;	
}




/*=====================Get Connected======================*/




.connectBg
{
	background-image: url(../images/women_wall.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	height: 100%;
	padding-top: 60px;
	padding-bottom: 60px;
}



.connectBg h2
{
	font-family: 'bebasregular',sans-serif;
	word-spacing: 2px;
	max-width: 420px;
	margin-top: 20%;
	font-size: 65px;
	color: #fff;
	border-bottom: solid 10px #fff;
	padding-bottom: 15px;
	word-spacing: 10px; 
}




.connectBg h3
{
	font-family: 'bebasregular',sans-serif;
	word-spacing: 2px;
	
	margin-top: 20px;

	font-size: 29px;
	font-weight: 300;
	color: #fff;
}


.helpLinks a {


	font-size: 20px;
	color: #fff;
	text-decoration: underline;

} 

.helpLinks a:hover{
	color: #f98b09;
}


.helpLinks {
	margin-top: 5%;
}


.whiteBg
{
	background-color: #fff;
	margin-top: 10px;
	margin-bottom: 10px;
}

.ourResearch h2
{
	font-family: 'bebasregular', serif;
	color: #464646;
	font-weight: 100;
	margin-top: 40px;	
	padding-bottom: 10px;
	border-bottom: solid 2px #292929;
	word-spacing: 10px;
}

.ourResearch p
{
	font-family: 'Lato', sans-serif;
	color: #464646;
	padding-top: 20px;
	font-weight: 300;
}

.ourResearch a
{
	font-family: 'Lato', sans-serif;
	color: #1ebdeb;
	text-decoration: underline;
	
}

.ourResearch
{
	padding-top: 60px;
	padding-bottom: 60px;
}



.darkBg
{
	background-color: #363636;
	padding-top:60px;
	padding-bottom:60px;
	margin-top: 20px;
	margin-bottom: 20px;
}

.greyBg {
	background-color: #e2e2e2;
	padding-top:60px;
	padding-bottom:60px;
	margin-top: 20px;
	margin-bottom: 20px;

}

.darkBg  h2{
	transition: all 0.8s ease-out;
}

.darkBg p {
	transition: all 0.8s ease-out;
}

.education h2
{
	font-family: 'bebasregular', serif;
	color: #1ebdeb;
	text-align: center;
	margin-top: 40px;	
	padding-bottom: 10px;
}

.education p
{
	font-family: 'Lato', sans-serif;
	color: #fff;
	text-align: center;
	padding-top: 20px;
	font-weight: 300;
}

.education a
{
	font-family: 'Lato', sans-serif;
	color: #1ebdeb;
	text-decoration: underline;
	
}


.education a:hover {
	color: #f98b09;
}
.education
{
	padding-bottom: 30px;
}


.blueButton{
padding:10px;

}


.shareStory h2
{
	font-family: 'bebasregular', serif;
	color: #464646;
	font-weight: 100;
	/*margin-top: 40px;*/
	word-spacing: 10px;	
	padding-bottom: 10px;
	
}

.shareStory h3 {
	font-family: 'Lato', sans-serif;
	color: #292929;
	font-weight: 400;
}

.shareStory p
{
	font-family: 'Lato', sans-serif;
	color: #292929;
	padding-top: 20px;
	font-weight: 300;
	padding-bottom: 20px;
}



.shareStory
{
	padding-top: 60px;
	padding-bottom: 60px;
}

.shareStory video {
	width: 100%;
}


#vidButton1 {
	width: 20px;
	height: 20px;
	background-color: #fff;
	border-radius: 50%;
	float: left;
	padding: 10px;
	margin-left: 48%;
	transition: all 0.3s ease-in;




}

#vidButton2 {
	width: 20px;
	height: 20px;
	background-color: #fff;
	border-radius: 50%;
	float: left;
	margin-left: 2%;
	transition: all 0.3s ease-in;

	
}

#vidButton1:hover {
	background-color: #f98b09;
	cursor: pointer;
}

#vidButton2:hover {
	background-color: #f98b09;
	cursor: pointer;
}
/*.creamBg {
	background-color: #faf1e7;
}*/



.storyPost h3 {
 font-family: 'Lato', sans-serif;
	color: #00bff3;
	font-weight: 700;
	font-size: 34px;
}

.storyPost h4 {
 font-family: 'Lato', sans-serif;
	color: #292929;
	font-weight: 400;
	font-size: 20px;
}

.storyPost a {
	color: #00bff3;
	float: right;
	text-decoration: underline;
}

.storyPost img {
	border-radius: 40px;
}


.researchCon {
	padding-top: 80px;
	padding-bottom: 80px;
}

.researchCon h2
{
	font-family: 'bebasregular', serif;
	word-spacing: 10px;
	margin-bottom: 20px;

}

.stories {
	padding-top: 10px;
}

.stories h2
{
	font-size: 20px;
	word-spacing: 5px;
	padding-top: 0px;
}

.stories h3
{
	font-size: 16px;
}

.stories a
{
	padding-bottom: 10px;
}
/*.ourResearchBg
{
	background-color: #FFF;
}*/

/*==============Story Form========================*/

.storyForm label
{
	font-family: 'Lato', sans-serif;
	color: #292929;
	padding-top: 20px;
	font-size: 20px;
	padding-bottom: 5px;
}

.storyButton input
{
	padding: 10px;
	background-color: #FFF;
	border: 1px solid #00bff3;
	border-radius: 10px;
	margin-bottom: 20px;
	cursor: pointer;
}
/* ... */

